--- a/index.html
+++ b/index.html
@@ -77,5 +77,61 @@
         alert("Your age: " + age);
       }
     </script>
+
+    <script>
+      // let txtRows = document.getElementById("txtRows");
+      // let txtCols = document.getElementById("txtCols");
+      // let pOutput = document.getElementById("pOutput");
+      // let display = "";
+
+      // function displayOutput() {
+      //   let display = "";
+      //   for (let outer = 1; outer <= Number(txtRows.value); outer++) {
+      //     for (let inner = 1; inner <= Number(txtCols.value); inner++) {
+      //       display += inner + " ";
+      //     }
+      //     display += "<br>";
+      //   }
+      //   pOutput.innerHTML = display;
+      // }
+
+      // let txtRows = document.getElementById("txtRows");
+      // let txtCols = document.getElementById("txtCols");
+      // let pOutput = document.getElementById("pOutput");
+      // let tblGenerate = document.getElementById("tblGenerate");
+      // let tblDisplay = "";
+
+      // function displayOutput() {
+      //   let tblDisplay = "";
+      //   for (let outer = 1; outer <= Number(txtRows.value); outer++) {
+      //     tblDisplay += "<tr>";
+      //     for (let inner = 1; inner <= Number(txtCols.value); inner++) {
+      //       tblDisplay += "<td>" + inner + "</td>";
+      //     }
+      //     tblDisplay += "</tr>";
+      //   }
+      //   tblGenerate.innerHTML = tblDisplay;
+      //   console.log(tblDisplay);
+      // }
+
+      // <input type="text" id="txtNum1" placeholder="Enter first number" />
+      // <br />
+      // <br />
+      // <input type="text" id="txtNum2" placeholder="Enter second number" />
+      // <br />
+      // <br />
+      // <button onclick="generateResult()" id="btnResult">Generate Result</button>
+
+      // <script>
+      //   let num1 = document.getElementById("txtNum1");
+      //   let num2 = document.getElementById("txtNum2");
+      //   let btnResult = "";
+
+      //   function generateResult() {
+      //     let result = Number(txtNum1.value) / Number(txtNum2.value);
+
+      //     alert("Thee result is: " + result);
+      //   }
+    </script>
   </body>
 </html>
