--- a/index.html
+++ b/index.html
@@ -132,6 +132,81 @@
 
       //     alert("Thee result is: " + result);
       //   }
+  //      <!-- <body>
+  //   <input type="text" id="txtFirstNum" placeholder="Enter first number" />
+  //   <br />
+  //   <br />
+  //   <input type="text" id="txtSecondNum" placeholder="Enter second number" />
+  //   <br />
+  //   <br />
+  //   <label for="selopeartion">Select operation:</label>
+  //   <select id="selOperation">
+  //     <option value="value1">+</option>
+  //     <option value="value2">*</option>
+  //     <option value="value3">-</option>
+  //     <option value="value4">/</option>
+  //     <br />
+  //     <br />
+  //   </select>
+  //   <br />
+  //   <br />
+  //   <button onclick="calculateNumbers()" id="btnCalculate">Calculate</button>
+
+  //   <script>
+  //     let Num1 = document.getElementById("txtFirstNum");
+  //     let Num2 = document.getElementById("txtSecondNum");
+  //     let Operation = document.getElementById("selOperation");
+
+  //     function calculateNumbers() {
+  //       let firstNum = Number(Num1.value);
+  //       let secondNum = Number(Num2.value);
+  //       let operation = Operation.value;
+
+  //       switch (operation) {
+  //         case "value1":
+  //           alert(
+  //             "The sum of " +
+  //               firstNum +
+  //               " and " +
+  //               secondNum +
+  //               " is " +
+  //               (firstNum + secondNum)
+  //           );
+  //           break;
+  //         case "value2":
+  //           alert(
+  //             " The product of " +
+  //               firstNum +
+  //               " and " +
+  //               secondNum +
+  //               " is " +
+  //               firstNum * secondNum
+  //           );
+  //           break;
+  //         case "value3":
+  //           alert(
+  //             " The difference of " +
+  //               firstNum +
+  //               " and " +
+  //               secondNum +
+  //               " is " +
+  //               (firstNum - secondNum)
+  //           );
+  //           break;
+  //         case "value4":
+  //           alert(
+  //             " The division of " +
+  //               firstNum +
+  //               " and " +
+  //               secondNum +
+  //               " is " +
+  //               firstNum / secondNum
+  //           );
+  //           break;
+  //         default:
+  //           alert("Invalid operator");
+  //       }
+  //     }
     </script>
   </body>
 </html>
