--- a/index.html
+++ b/index.html
@@ -208,5 +208,88 @@
   //       }
   //     }
     </script>
+    <script>
+       // GRADE EVALUATOR
+       // function evaluateGrade() {
+       //      let grade = parseInt(prompt("Enter your grade:"));
+       //      let result = "";
+
+       //      if (grade >= 95 && grade <= 100) result = "Very Good";
+       //      else if (grade >= 85 && grade < 95) result = "Good";
+       //      else if (grade >= 75 && grade < 85) result = "Fair";
+       //      else if (grade >= 60 && grade < 75) result = "Needs Improvement";
+       //      else if (grade >= 0 && grade < 60) result = "Failed";
+       //      else result = "Invalid Grade";
+
+       //      alert("Your performance: " + result);
+       //  }
+       // <button onclick="evaluateGrade()">Check Grade</button>
+
+       // SIMPLE CALCULATOR
+       // function calculate() {
+       //      let num1 = parseFloat(prompt("Enter first number:"));
+       //      let operator = prompt("Enter operator (+, -, *, /, %):");
+       //      let num2 = parseFloat(prompt("Enter second number:"));
+       //      let result;
+
+       //      if (operator == "+") result = num1 + num2;
+       //      else if (operator == "-") result = num1 - num2;
+       //      else if (operator == "*") result = num1 * num2;
+       //      else if (operator == "/") result = num1 / num2;
+       //      else if (operator == "%") result = num1 % num2;
+       //      else result = "Invalid operator";
+
+       //      alert("Result: " + result);
+       //  }
+       // <button onclick="calculate()">Calculate</button>
+
+      // AGE VERIFICATION
+      //  function checkAge() {
+      //       let age = parseInt(prompt("Enter your age:"));
+      //       let result = age >= 60 ? "Senior Citizen" : age >= 18 ? "Adult" : "Minor";
+      //       alert("You are a " + result);
+      //   }
+      // <button onclick="checkAge()">Check Age</button>
+
+      // NUMBER TO WORD CONVERTER
+      //  function convertNumber() {
+      //       let num = parseInt(prompt("Enter a number (1-5):"));
+      //       let word;
+      //       switch(num) {
+      //           case 1: word = "One"; break;
+      //           case 2: word = "Two"; break;
+      //           case 3: word = "Three"; break;
+      //           case 4: word = "Four"; break;
+      //           case 5: word = "Five"; break;
+      //           default: word = "Out of range";
+      //       }
+      //       alert(word);
+      //   }
+      // <button onclick="convertNumber()">Convert</button>
+
+      // MULTIPLICATION TABLE
+       // function multiplicationTable() {
+       //      let num = parseInt(prompt("Enter a number:"));
+       //      let output = "";
+       //      for (let i = 1; i <= 10; i++) {
+       //          output += num + " x " + i + " = " + (num * i) + "\n";
+       //      }
+       //      alert(output);
+       //  }
+       //  <button onclick="multiplicationTable()">Show Table</button>
+
+      // EVEN NUMBERS WHILE LOOP
+       //  function showEvenNumbers() {
+       //      let i = 2;
+       //      let output = "";
+       //      while (i <= 50) {
+       //          output += i + " ";
+       //          i += 2;
+       //      }
+       //      alert(output);
+       //  }
+
+       // <button onclick="showEvenNumbers()">Show Even Numbers</button>
+    </script>
   </body>
 </html>
