--- a/index.html
+++ b/index.html
@@ -291,5 +291,85 @@
 
        // <button onclick="showEvenNumbers()">Show Even Numbers</button>
     </script>
+    <!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lab Activities</title>
+  </head>
+  <body>
+    <h1>Lab Activities - Weeks 3 to 5</h1>
+
+    <h2>1. Grade Evaluator</h2>
+    <button onclick="evaluateGrade()">Enter Grade</button>
+    <p id="gradeResult"></p>
+
+    <h2>2. Simple Calculator</h2>
+    <input type="number" id="num1" placeholder="Enter first number" />
+    <input type="number" id="num2" placeholder="Enter second number" />
+    <select id="operator">
+      <option value="+">+</option>
+      <option value="-">-</option>
+      <option value="*">*</option>
+      <option value="/">/</option>
+    </select>
+    <button onclick="calculate()">Calculate</button>
+    <p id="calcResult"></p>
+
+    <h2>3. Login System</h2>
+    <input type="text" id="username" placeholder="Enter Username" />
+    <input type="password" id="password" placeholder="Enter Password" />
+    <button onclick="checkLogin()">Login</button>
+    <p id="loginResult"></p>
+
+    <script>
+      function evaluateGrade() {
+        let grade = parseInt(prompt("Enter your grade:"));
+        let result = "";
+        if (grade >= 95 && grade <= 100) result = "Very Good";
+        else if (grade >= 85) result = "Good";
+        else if (grade >= 75) result = "Fair";
+        else if (grade >= 60) result = "Needs Improvement";
+        else result = "Failed";
+        document.getElementById("gradeResult").innerText = "Result: " + result;
+      }
+
+      function calculate() {
+        let num1 = parseFloat(document.getElementById("num1").value);
+        let num2 = parseFloat(document.getElementById("num2").value);
+        let operator = document.getElementById("operator").value;
+        let result;
+        switch (operator) {
+          case "+":
+            result = num1 + num2;
+            break;
+          case "-":
+            result = num1 - num2;
+            break;
+          case "*":
+            result = num1 * num2;
+            break;
+          case "/":
+            result = num2 !== 0 ? num1 / num2 : "Cannot divide by zero";
+            break;
+        }
+        document.getElementById("calcResult").innerText = "Result: " + result;
+      }
+
+      function checkLogin() {
+        let username = document.getElementById("username").value;
+        let password = document.getElementById("password").value;
+        if (username === "admin" && password === "1234") {
+          document.getElementById("loginResult").innerText =
+            "Login Successful!";
+        } else {
+          document.getElementById("loginResult").innerText =
+            "Invalid Username or Password";
+        }
+      }
+    </script>
+  </body>
+</html> -->
   </body>
 </html>
