--- a/index.html
+++ b/index.html
@@ -371,5 +371,22 @@
     </script>
   </body>
 </html> -->
+    <script>
+      // let arr = [
+      //   [1, 2, 3],
+      //   [4, 5, 6],
+      //   [7, 8, 9],
+      // ];
+
+      // let output = "";
+
+      // for (let outer = 0; outer < arr.length; outer++) {
+      //   for (let inner = 0; inner < arr.length; inner++) {
+      //     output += arr[outer][inner] + " ";
+      //   }
+      //   output += "\n";
+      // }
+      // alert(output);
+    </script>
   </body>
 </html>
