--- a/index.html
+++ b/index.html
@@ -694,6 +694,249 @@
 //     
     </script>
 
+    
+<!--   <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real Estate Property Management</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        text-align: center;
+      }
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: left;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+      }
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
+      th,
+      td {
+        padding: 10px;
+        text-align: center;
+      }
+      .form-group {
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Real Estate Property Management</h1>
+
+      <div class="form-group">
+        <label for="propertyName">Property Name:</label>
+        <input type="text" id="propertyName" />
+      </div>
+
+      <div class="form-group">
+        <label for="propertyType">Property Type:</label>
+        <select id="propertyType">
+          <option value="Detached">Detached</option>
+          <option value="Semi Detached">Semi Detached</option>
+          <option value="Town House">Town House</option>
+          <option value="Apartment">Apartment</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="propertySize">Size (sqm):</label>
+        <input type="number" id="propertySize" min="1" />
+      </div>
+
+      <div class="form-group">
+        <label>Amenities:</label><br />
+        <input
+          type="checkbox"
+          class="amenities"
+          value="Pool"
+          data-price="100000"
+        />
+        Pool (+₱100,000) <br />
+        <input
+          type="checkbox"
+          class="amenities"
+          value="Garage"
+          data-price="50000"
+        />
+        Garage (+₱50,000) <br />
+        <input
+          type="checkbox"
+          class="amenities"
+          value="Garden"
+          data-price="70000"
+        />
+        Garden (+₱70,000) <br />
+        <input
+          type="checkbox"
+          class="amenities"
+          value="Gym"
+          data-price="80000"
+        />
+        Gym (+₱80,000) <br />
+        <input
+          type="checkbox"
+          class="amenities"
+          value="Security System"
+          data-price="60000"
+        />
+        Security System (+₱60,000) <br />
+        <input
+          type="checkbox"
+          class="amenities"
+          value="Parking"
+          data-price="40000"
+        />
+        Parking (+₱40,000) <br />
+      </div>
+
+      <button onclick="addProperty()">Add Property</button>
+      <button onclick="clearProperties()">Clear List</button>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Size (sqm)</th>
+            <th>Amenities</th>
+            <th>Price (₱)</th>
+          </tr>
+        </thead>
+        <tbody id="propertyTable"></tbody>
+      </table>
+    </div>
+
+    <script src="housing.js"></script>
+  </body>
+</html>
+
+
+
+
+
+
+    let properties = []; // Array to store property objects
+
+// Function to add a property
+function addProperty() {
+  let name = document.getElementById("propertyName").value;
+  let type = document.getElementById("propertyType").value;
+  let size = document.getElementById("propertySize").value;
+
+  // Get selected amenities
+  let selectedAmenities = [];
+  let checkboxes = document.querySelectorAll(".amenities:checked");
+  let amenitiesCost = 0;
+
+  checkboxes.forEach((checkbox) => {
+    selectedAmenities.push(checkbox.value);
+    amenitiesCost += parseInt(checkbox.getAttribute("data-price"));
+  });
+
+  // Input validation using switch statement
+  let isValid = false;
+  switch (true) {
+    case name.trim() === "":
+      alert("Please enter a property name.");
+      break;
+    case size.trim() === "" || isNaN(size) || size <= 0:
+      alert("Please enter a valid size (greater than 0).");
+      break;
+    default:
+      isValid = true;
+  }
+
+  if (!isValid) return;
+
+  size = parseInt(size);
+
+  // Base price
+  let basePrice = 1000000;
+  let extraCost = size >= 25 ? 300000 : 0; // Additional cost for large properties
+
+  // Property type price increase using switch statement
+  let typeIncrease = 0;
+  switch (type) {
+    case "Detached":
+      typeIncrease = basePrice * 0.4; // +40%
+      break;
+    case "Semi Detached":
+      typeIncrease = basePrice * 0.3; // +30%
+      break;
+    case "Town House":
+      typeIncrease = basePrice * 0.2; // +20%
+      break;
+    case "Apartment":
+      typeIncrease = basePrice * 0.1; // +10%
+      break;
+  }
+
+  // Calculate total price
+  let totalPrice = basePrice + typeIncrease + extraCost + amenitiesCost;
+
+  // Create property object
+  let property = {
+    name: name,
+    type: type,
+    size: size,
+    amenities: selectedAmenities.join(", "),
+    price: totalPrice,
+  };
+
+  properties.push(property);
+  displayProperties();
+  clearForm();
+}
+
+// Function to display properties in the table
+function displayProperties() {
+  let table = document.getElementById("propertyTable");
+  table.innerHTML = ""; // Clear table
+
+  for (let i = 0; i < properties.length; i++) {
+    let row = `<tr>
+            <td>${properties[i].name}</td>
+            <td>${properties[i].type}</td>
+            <td>${properties[i].size}</td>
+            <td>${properties[i].amenities}</td>
+            <td>₱${properties[i].price.toLocaleString()}</td>
+        </tr>`;
+    table.innerHTML += row;
+  }
+}
+
+// Function to clear the form inputs
+function clearForm() {
+  document.getElementById("propertyName").value = "";
+  document.getElementById("propertyType").value = "Detached";
+  document.getElementById("propertySize").value = "";
+  document
+    .querySelectorAll(".amenities")
+    .forEach((checkbox) => (checkbox.checked = false));
+}
+
+// Function to clear all properties
+function clearProperties() {
+  let confirmClear = confirm("Are you sure you want to clear all properties?");
+  if (confirmClear) {
+    properties = []; // Empty the array
+    displayProperties(); // Refresh the table
+  }
+} -->
+
 
     </script>
 
