--- a/index.html
+++ b/index.html
@@ -1167,5 +1167,75 @@
 // }
 
   </script>
+    <script>
+//       <!DOCTYPE html>
+// <html lang="en">
+//   <head>
+//     <meta charset="UTF-8" />
+//     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+//     <title>Capitalize Words</title>
+//     <style>
+//       body {
+//         font-family: Arial, sans-serif;
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: center;
+//         height: 50vh;
+//         background-color: #f4f4f4;
+//       }
+//       input,
+//       button {
+//         font-size: 18px;
+//         margin: 10px;
+//         padding: 8px;
+//       }
+//       #output {
+//         font-size: 20px;
+//         font-weight: bold;
+//         color: #333;
+//       }
+//     </style>
+//   </head>
+//   <body>
+//     <h2>Enter a String:</h2>
+//     <input
+//       type="text"
+//       id="inputString"
+//       oninput="capitalizeWords()"
+//       placeholder="Type here..."
+//     />
+//     <div id="output"></div>
+
+//     <script>
+//       function capitalizeWords() {
+//         let input = document.getElementById("inputString").value;
+//         if (input === "") {
+//           document.getElementById("output").textContent = "";
+//           return;
+//         }
+
+//         let result = "";
+//         let capitalizeNext = true;
+
+//         for (let i = 0; i < input.length; i++) {
+//           let char = input[i];
+//           let ascii = char.charCodeAt(0);
+
+//           if (capitalizeNext && ascii >= 97 && ascii <= 122) {
+//             result += String.fromCharCode(ascii - 32);
+//           } else {
+//             result += char;
+//           }
+
+//           capitalizeNext = char === " ";
+//         }
+
+//         document.getElementById("output").textContent = result;
+//       }
+//   </body>
+// </html>
+
+    </script>
   </body>
 </html>
