--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,8 @@
 //       }
 //   </body>
 // </html>
-
+      
+<script>
 //       <!DOCTYPE html>
 // <html lang="en">
 //   <head>
@@ -1361,7 +1362,5 @@
 //   };
 // }
 
-
-    </script>
   </body>
 </html>
