--- a/index.html
+++ b/index.html
@@ -1235,8 +1235,8 @@
 //       }
 //   </body>
 // </html>
+
       
-<script>
 //       <!DOCTYPE html>
 // <html lang="en">
 //   <head>
@@ -1361,6 +1361,6 @@
 //     }
 //   };
 // }
-
+  </script>
   </body>
 </html>
