--- a/index.html
+++ b/index.html
@@ -1236,8 +1236,8 @@
 //   </body>
 // </html>
 
-      
-//       <!DOCTYPE html>
+<script>
+//  <!DOCTYPE html>
 // <html lang="en">
 //   <head>
 //     <meta charset="UTF-8" />
@@ -1361,6 +1361,7 @@
 //     }
 //   };
 // }
+  </script>   
   </script>
   </body>
 </html>
