--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script>
       // https://drive.google.com/drive/folders/1xRJqZwF6PF__Fm6jN1tUdvwkzhvPJRpY?usp=sharing
     </script>
- <!DOCTYPE html>
-<html lang="en">
+ <!-- <!DOCTYPE html> -->
+<!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -78,7 +78,7 @@
       </thead>
       <tbody id="tblPerson">
         <!-- populate rows -->
-      </tbody>
+      <!-- </tbody>
     </table>
     <script src="Person.js"></script
     <script>
@@ -123,7 +123,7 @@
       }
     </script
   </body>
-</html>
-  </script>
-  </body>
-</html>
+</html> -->
+  <!-- </script>
+  </body> -->
+<!-- </html> --> -->
